--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,12 +2,11 @@
 
 client_id = "4ed2e14609ddf568722fd79e396a37fd"
 name = "CSV Orders to FTP"
-application_url = "https://csv-orders-to-ftp.vercel.app"
+application_url = "https://csv-to-ftp.vercel.app"
 embedded = true
 
 [build]
 automatically_update_urls_on_dev = true
-include_config_on_deploy = true
 
 [webhooks]
 api_version = "2025-10"
@@ -26,4 +25,4 @@ scopes = "read_customers,read_orders,read_products"
 optional_scopes = [ ]
 
 [auth]
-redirect_urls = [ "https://csv-orders-to-ftp.vercel.app/auth/callback" ]
+redirect_urls = [ "https://csv-to-ftp.vercel.app/auth/callback" ]
