--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.7.0",
     "@shopify/shopify-app-session-storage-mysql": "^5.0.3",
+    "csv-writer": "^1.6.0",
     "isbot": "^5.1.0",
     "mysql2": "^3.15.3",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "ssh2-sftp-client": "^12.0.1",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
