--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.7.0",
     "@shopify/shopify-app-session-storage-mysql": "^5.0.3",
+    "basic-ftp": "^5.0.5",
     "csv-writer": "^1.6.0",
     "isbot": "^5.1.0",
     "mysql2": "^3.15.3",
